sites/all/themes/ec_resp/css/less/search.less
/* --------------- Search Block ---------------- */
#search-block-form {
  .form-item {
    margin: 0;
    input {
      border-radius: 4px 0 0 4px;
      border-color: @btn-default-border;
    }
  }
  .form-actions  {
    margin: 0;
    input {
      margin-right: 0;
      border-radius: 0 4px 4px 0;
      border-left: none;
    }
  }  
}

/* --------------- Search Form ---------------- */
#search-form {
  #edit-basic {
    .form-item-keys {
      margin-top: 0;
      margin-bottom: 0;
    }
    #edit-submit {
      vertical-align: top;
    }
  }
}

/* --------------- Search Results ---------------- */
ol.search-results {
  padding-left: 0;
}
.search-results li {
  border-bottom: 1px solid #d3d7d9;
  padding-bottom: 0.4285em;
  margin-bottom: 0.5em;
}
.search-results li:last-child {
  border-bottom: none;
  padding-bottom: 0;
  margin-bottom: 1em;
}
.search-results .search-snippet-info {
  padding-left: 0;
}

/* --------------- Search Filters ---------------- */
.block-facetapi.panel {
  .item-list {
    margin: 0;
    ul {
      margin-bottom: 0;
      margin-top: 0;
    }
  }
}

.block-current-search {
  h3 {
    margin: 0;
    font-size: 1em;
    font-weight: bold;
  }
}

